--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,17 +14,85 @@
                 </button>
             </div>
 
-            <div class="collapse navbar-collapse align-items-center justify-content-end" id="navbar_main">
+           <div class="collapse navbar-collapse align-items-center justify-content-end" id="navbar_main">
+    <!-- Navbar search - For small resolutions -->
+    <div class="navbar-search-widget b-xs-bottom py-3 d-lg-none d-none">
+        <form class="" role="form">
+            <div class="input-group input-group-lg">
+                <input type="text" class="form-control" placeholder="Search for...">
+                <span class="input-group-btn">
+                <button class="btn btn-base-3" type="button">Go!</button>
+                </span>
+            </div>
+        </form>
+    </div>
+
+    <!-- Navbar links -->
     <ul class="navbar-nav">
-     
-<li class="nav-item dropdown megamenu">
-            <a class="nav-link dropdown-toggle" href="index.html#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              More
+        <li class="nav-item dropdown megamenu">
+            <a class="nav-link" href="../../index.html">
+                Overview
+            </a>
+        </li>
+        <li class="nav-item dropdown">
+            <a href="top#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+               Pages
+            </a>
+
+            <div class="dropdown-menu dropdown-menu-xl py-0 px-0 overflow--hidden" aria-labelledby="navbar_1_dropdown_1">
+                <div class="list-group rounded">
+                    <a href="../../pages-home.html" class="list-group-item list-group-item-action d-flex align-items-center">
+                        <div class="list-group-content">
+                            <div class="list-group-heading heading heading-6 mb-1">Home pages</div>
+                            <p class="text-sm mb-0">Lorem ipsum dolor sit amet consectetur adipiscing eiusmod tempor</p>
+                        </div>
+                    </a>
+                    <a href="../../pages-inner.html" class="list-group-item list-group-item-action d-flex align-items-center">
+                        <div class="list-group-content">
+                            <div class="list-group-heading heading heading-6 mb-1">Inner pages</div>
+                            <p class="text-sm mb-0">Lorem ipsum dolor sit amet consectetur adipiscing eiusmod tempor</p>
+                        </div>
+                    </a>
+                    <a href="../../pages-profile.html" class="list-group-item list-group-item-action d-flex align-items-center">
+                        <div class="list-group-content">
+                            <div class="list-group-heading heading heading-6 mb-1">Profile pages</div>
+                            <p class="text-sm mb-0">Lorem ipsum dolor sit amet consectetur adipiscing eiusmod tempor</p>
+                        </div>
+                    </a>
+                    <a href="../../pages-blog.html" class="list-group-item list-group-item-action d-flex align-items-center">
+                        <div class="list-group-content">
+                            <div class="list-group-heading heading heading-6 mb-1">Blog pages</div>
+                            <p class="text-sm mb-0">Lorem ipsum dolor sit amet consectetur adipiscing eiusmod tempor</p>
+                        </div>
+                    </a>
+                    <a href="../../pages-shop.html" class="list-group-item list-group-item-action d-flex align-items-center">
+                        <div class="list-group-content">
+                            <div class="list-group-heading heading heading-6 mb-1">Shop pages</div>
+                            <p class="text-sm mb-0">Lorem ipsum dolor sit amet consectetur adipiscing eiusmod tempor</p>
+                        </div>
+                    </a>
+                    <a href="../../pages-real-estate.html" class="list-group-item list-group-item-action d-flex align-items-center">
+                        <div class="list-group-content">
+                            <div class="list-group-heading heading heading-6 mb-1">Real estate pages</div>
+                            <p class="text-sm mb-0">Lorem ipsum dolor sit amet consectetur adipiscing eiusmod tempor</p>
+                        </div>
+                    </a> 
+                </div>
+            </div>
+        </li>
+        <li class="nav-item dropdown megamenu">
+            <a class="nav-link" href="../../demos.html">
+                Demos
+            </a>
+        </li>
+        <li class="nav-item dropdown megamenu">
+            <a class="nav-link dropdown-toggle" href="homepage-recruitment-1.html#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Components
             </a>
 
             <div class="dropdown-menu">
                 <div class="mega-dropdown-menu row row-no-padding">
-                    <div class="mega-dropdown-col mega-dropdown-col-cover mega-dropdown-col-cover--left col-lg-5 d-none d-lg-block d-xl-block" style="background-image: url(assets/images/prv/other/img-14-1000x900.jpg); background-position: center center;">
+                    <div class="mega-dropdown-col mega-dropdown-col-cover mega-dropdown-col-cover--left col-lg-5 d-none d-lg-block d-xl-block" style="background-image: url(../../assets/images/prv/other/img-14-1000x900.jpg); background-position: center center;">
                         <span class="mask mask-base-1--style-1 alpha-8"></span>
                         <div class="mega-dropdown-col-inner d-flex align-items-center no-padding">
                             <div class="col">
@@ -41,7 +109,7 @@
                                                 an intuitive HTML markup.
                                             </p>
                                             <div class="btn-container mt-5">
-                                                <a href="documentation/getting-started/introduction.html" target="_blank" class="btn btn-styled btn-white btn-outline btn-circle">Read the Docs</a>
+                                                <a href="../../documentation/getting-started/introduction.html" target="_blank" class="btn btn-styled btn-white btn-outline btn-circle">Read the Docs</a>
                                             </div>
                                         </div>
                                     </div>
@@ -53,63 +121,63 @@
                     <div class="col-md-4 col-lg-2 ml-lg-auto">
                         <ul class="megadropdown-links">
                             <li>
-                                <a class="dropdown-item" href="documentation/components/alerts.html">
+                                <a class="dropdown-item" href="../../documentation/components/alerts.html">
                                     Alerts
                                 </a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="documentation/components/badges.html">
-                                    Badges
-                                </a>
+                                <a class="dropdown-item" href="../../documentation/components/badges.html">
+                                    Careers
+                                   <span class="badge badge-pill bg-base-2">Hiring</span>                                   </a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="documentation/components/buttons.html">
+                                <a class="dropdown-item" href="../../documentation/components/buttons.html">
                                     Buttons
                                 </a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="documentation/components/cards.html">
+                                <a class="dropdown-item" href="../../documentation/components/cards.html">
                                     Cards
                                 </a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="documentation/components/collapse.html">
+                                <a class="dropdown-item" href="../../documentation/components/collapse.html">
                                     Collapse
                                 </a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="documentation/components/countdown.html">
+                                <a class="dropdown-item" href="../../documentation/components/countdown.html">
                                     Countdown
                                 </a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="documentation/components/dropdown.html">
+                                <a class="dropdown-item" href="../../documentation/components/dropdown.html">
                                     Dropdowns
                                 </a>
                             </li>
 
                             <li>
-                                <a class="dropdown-item" href="documentation/components/forms.html">
+                                <a class="dropdown-item" href="../../documentation/components/forms.html">
                                     Forms
                                 </a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="documentation/components/instagram.html">
+                                <a class="dropdown-item" href="../../documentation/components/instagram.html">
                                     Instagram
                                 </a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="documentation/components/lightbox.html">
+                                <a class="dropdown-item" href="../../documentation/components/lightbox.html">
                                     Lightbox
                                 </a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="documentation/components/maps.html">
+                                <a class="dropdown-item" href="../../documentation/components/maps.html">
                                     Maps
                                 </a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="documentation/components/masonry.html">
+                                <a class="dropdown-item" href="../../documentation/components/masonry.html">
                                     Masonry
                                 </a>
                             </li>
@@ -119,42 +187,42 @@
                     <div class="col-md-4 col-lg-2">
                         <ul class="megadropdown-links">
                             <li>
-                                <a class="dropdown-item" href="documentation/components/pagination.html">
+                                <a class="dropdown-item" href="../../documentation/components/pagination.html">
                                     Pagination
                                 </a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="documentation/components/progress.html">
+                                <a class="dropdown-item" href="../../documentation/components/progress.html">
                                     Progress bars
                                 </a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="documentation/components/recaptcha.html">
+                                <a class="dropdown-item" href="../../documentation/components/recaptcha.html">
                                     Recaptcha
                                 </a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="documentation/content/titles.html">
+                                <a class="dropdown-item" href="../../documentation/content/titles.html">
                                     Section titles
                                 </a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="documentation/components/forms.html#ex_component_sliders">
+                                <a class="dropdown-item" href="../../documentation/components/forms.html#ex_component_sliders">
                                     Sliders
                                 </a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="documentation/components/tabs.html">
+                                <a class="dropdown-item" href="../../documentation/components/tabs.html">
                                     Tabs
                                 </a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="documentation/components/typed-animations.html">
+                                <a class="dropdown-item" href="../../documentation/components/typed-animations.html">
                                     Typed animations
                                 </a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="documentation/blocks/headers.html">
+                                <a class="dropdown-item" href="../../documentation/blocks/headers.html">
                                     Headers
                                 </a>
                             </li>
@@ -169,12 +237,12 @@
                                 </a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="documentation/blocks/footers.html">
+                                <a class="dropdown-item" href="../../documentation/blocks/footers.html">
                                     Footers
                                 </a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="documentation/blocks/hero.html">
+                                <a class="dropdown-item" href="../../documentation/blocks/hero.html">
                                     Hero blocks
                                 </a>
                             </li>
@@ -185,43 +253,43 @@
                         <ul class="megadropdown-links">
 
                             <li>
-                                <a class="dropdown-item" href="documentation/blocks/icon.html">
+                                <a class="dropdown-item" href="../../documentation/blocks/icon.html">
                                     Icon blocks
                                 </a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="documentation/blocks/jobs.html">
+                                <a class="dropdown-item" href="../../documentation/blocks/jobs.html">
                                     Job blocks
                                 </a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="documentation/blocks/pricing.html">
+                                <a class="dropdown-item" href="../../documentation/blocks/pricing.html">
                                     Pricing blocks
                                 </a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="documentation/blocks/product.html">
+                                <a class="dropdown-item" href="../../documentation/blocks/product.html">
                                     Product blocks
                                 </a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="documentation/blocks/real-estate.html">
+                                <a class="dropdown-item" href="../../documentation/blocks/real-estate.html">
                                     Real-Estate blocks
                                 </a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="documentation/blocks/team.html">
+                                <a class="dropdown-item" href="../../documentation/blocks/team.html">
                                     Team blocks
                                 </a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="documentation/blocks/testimonials.html">
+                                <a class="dropdown-item" href="../../documentation/blocks/testimonials.html">
                                     Testimonial blocks
                                 </a>
                             </li>
 
                             <li>
-                                <a class="dropdown-item" href="documentation/blocks/comments.html">
+                                <a class="dropdown-item" href="../../documentation/blocks/comments.html">
                                     Comment blocks
                                 </a>
                             </li>
@@ -229,39 +297,22 @@
                     </div>
                 </div>
             </div>
-        </li> 
-     
-        <li class="nav-item dropdown">
-            <a href="{{ site.baseurl }}/about" class="nav-link">About us</a>
         </li>
-        <li class="nav-item dropdown">
-            <a href="news.html" class="nav-link">News</a>
-        </li>
-        <li class="nav-item dropdown">
-            <a href="{{ site.baseurl }}/contact" class="nav-link">Contact</a>
-        </li>
-        <li class="nav-item">
-            <a href="#" class="nav-link">Demos</a>
-        </li>
-     
-     
-        <li class="nav-item dropdown">
-            <a href="top#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Services</a>
+    </ul>
 
-            <ul class="dropdown-menu">
-                <li class="dropdown">
-                    <a href="{{ site.baseurl }}/" class="dropdown-item" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Processing</a>
-                    <a href="#" class="dropdown-item" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Advisory</a>
-                </li>
-            </ul>
-        </li>     
-  </ul>
+    <ul class="navbar-nav ml-lg-auto">
+        <li class="nav-item">
+            <a href="../../documentation/getting-started/introduction.html" class="nav-link">
+               Docs
+            </a>
+        </li>
+    </ul>
 </div>
 
 <div class="pl-4 d-none d-lg-inline-block">
     <a href="https://goo.gl/9BbH7R" class="btn btn-styled btn-sm btn-base-5 text-uppercase btn-circle">
-        Purchase now
-        <span class="badge badge-pill bg-base-2">$23 USD</span>    </a>
+        Get Started
+      </a>
 </div>
         </div>
     </nav>
