--- a/_includes/header.html
+++ b/_includes/header.html
@@ -48,7 +48,7 @@
             </a>
         </li>
           <li class="nav-item dropdown megamenu">
-            <a class="nav-link" href="{{ site.baseurl }}/#">
+            <a class="nav-link" href="#">
                Company
             </a>
         </li>       
@@ -60,15 +60,15 @@
 
             <div class="dropdown-menu dropdown-menu-xl py-0 px-0 overflow--hidden" aria-labelledby="navbar_1_dropdown_1">
                 <div class="list-group rounded">
-                    <a href="../../pages-home.html" class="list-group-item list-group-item-action d-flex align-items-center">
+                    <a href="{{ site.baseurl }}/about/" class="list-group-item list-group-item-action d-flex align-items-center">
                         <div class="list-group-content">
-                            <div class="list-group-heading heading heading-6 mb-1">Home pages</div>
+                            <div class="list-group-heading heading heading-6 mb-1">About us</div>
                             <p class="text-sm mb-0">Lorem ipsum dolor sit amet consectetur adipiscing eiusmod tempor</p>
                         </div>
                     </a>
-                    <a href="../../pages-inner.html" class="list-group-item list-group-item-action d-flex align-items-center">
+                    <a href="{{ site.baseurl }}/contact/" class="list-group-item list-group-item-action d-flex align-items-center">
                         <div class="list-group-content">
-                            <div class="list-group-heading heading heading-6 mb-1">Inner pages</div>
+                            <div class="list-group-heading heading heading-6 mb-1">Contact us</div>
                             <p class="text-sm mb-0">Lorem ipsum dolor sit amet consectetur adipiscing eiusmod tempor</p>
                         </div>
                     </a>
@@ -99,11 +99,222 @@
                 </div>
             </div>
         </li>     
-     <li class="nav-item dropdown megamenu">
+    
+<li class="nav-item dropdown megamenu">
             <a class="nav-link dropdown-toggle" href="homepage-recruitment-1.html#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
              What we do
             </a>
 
+            <div class="dropdown-menu">
+                <div class="mega-dropdown-menu row row-no-padding">
+                    <div class="mega-dropdown-col mega-dropdown-col-cover mega-dropdown-col-cover--left col-lg-5 d-none d-lg-block d-xl-block" style="background-image: url(../../assets/images/prv/other/img-14-1000x900.jpg); background-position: center center;">
+                        <span class="mask bg-base-1 alpha-8"></span>
+                        <div class="mega-dropdown-col-inner d-flex align-items-center no-padding">
+                            <div class="col">
+                                <div class="row align-items-center">
+                                    <div class="col-12">
+                                        <div class="px-4">
+                                            <h2 class="heading heading-2 strong-600 c-white">
+                                                Documentation 
+                                            </h2>
+                                            <p class="strong-300 c-white mt-4">
+                                                Get started fast and easy with Boomerang using the documentation and shortcode examples. No matter
+                                                you are a developer or new to web design, you will
+                                                find our theme very easy to customize with
+                                                an intuitive HTML markup.
+                                            </p>
+                                            <div class="btn-container mt-5">
+                                                <a href="../../documentation/getting-started/introduction.html" target="_blank" class="btn btn-styled btn-white btn-outline btn-circle">Read the Docs</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4 col-lg-2 ml-lg-auto">
+                        <ul class="megadropdown-links">
+                            <li>
+                                <a class="dropdown-item" href="../../documentation/components/alerts.html">
+                                    Alerts
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="../../documentation/components/badges.html">
+                                    Careers
+                                   <span class="badge badge-pill bg-base-2">Hiring</span>                                   </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="../../documentation/components/buttons.html">
+                                    Buttons
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="../../documentation/components/cards.html">
+                                    Cards
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="../../documentation/components/collapse.html">
+                                    Collapse
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="../../documentation/components/countdown.html">
+                                    Countdown
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="../../documentation/components/dropdown.html">
+                                    Dropdowns
+                                </a>
+                            </li>
+
+                            <li>
+                                <a class="dropdown-item" href="../../documentation/components/forms.html">
+                                    Forms
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="../../documentation/components/instagram.html">
+                                    Instagram
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="../../documentation/components/lightbox.html">
+                                    Lightbox
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="../../documentation/components/maps.html">
+                                    Maps
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="../../documentation/components/masonry.html">
+                                    Masonry
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="col-md-4 col-lg-2">
+                        <ul class="megadropdown-links">
+                            <li>
+                                <a class="dropdown-item" href="../../documentation/components/pagination.html">
+                                    Pagination
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="../../documentation/components/progress.html">
+                                    Progress bars
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="../../documentation/components/recaptcha.html">
+                                    Recaptcha
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="../../documentation/content/titles.html">
+                                    Section titles
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="../../documentation/components/forms.html#ex_component_sliders">
+                                    Sliders
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="../../documentation/components/tabs.html">
+                                    Tabs
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="../../documentation/components/typed-animations.html">
+                                    Typed animations
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="../../documentation/blocks/headers.html">
+                                    Headers
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="https://preview.webpixels.io/boomerang-v3.6.1/html/default/sliders/boomerang-slider/index.html">
+                                    Boomerang slider
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="https://preview.webpixels.io/boomerang-v3.6.1/html/default/sliders/revolution-slider/index.html">
+                                    Revolution slider
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="../../documentation/blocks/footers.html">
+                                    Footers
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="../../documentation/blocks/hero.html">
+                                    Hero blocks
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="col-md-4 col-lg-2">
+                        <ul class="megadropdown-links">
+
+                            <li>
+                                <a class="dropdown-item" href="../../documentation/blocks/icon.html">
+                                    Icon blocks
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="../../documentation/blocks/jobs.html">
+                                    Job blocks
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="../../documentation/blocks/pricing.html">
+                                    Pricing blocks
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="../../documentation/blocks/product.html">
+                                    Product blocks
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="../../documentation/blocks/real-estate.html">
+                                    Real-Estate blocks
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="../../documentation/blocks/team.html">
+                                    Team blocks
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="../../documentation/blocks/testimonials.html">
+                                    Testimonial blocks
+                                </a>
+                            </li>
+
+                            <li>
+                                <a class="dropdown-item" href="../../documentation/blocks/comments.html">
+                                    Comment blocks
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </li>
+     
+     
             <div class="dropdown-menu">
                 <div class="mega-dropdown-menu row row-no-padding">
                     <div class="mega-dropdown-col mega-dropdown-col-cover mega-dropdown-col-cover--left col-lg-5 d-none d-lg-block d-xl-block" style="background-image: url(../../assets/images/prv/other/img-14-1000x900.jpg); background-position: center center;">
